--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode
+.gradio
 
 dataProcessing/ordinances/*
 dataProcessing/ordinances/*/*
@@ -31,3 +33,8 @@ judgements
 
 legislations_chunks
 judgements_chunks
+
+cloudflared.deb
+
+db/_temp
+db/temp.txt
