--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@ai-sdk/react": "^1.2.6",
     "@ai-sdk/ui-utils": "^0.0.20",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.3",
     "@types/node": "20.2.4",
@@ -35,6 +38,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
     "next": "13.4.4",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -46,6 +50,7 @@
     "tailwindcss-animate": "^1.0.7",
     "types": "link:next-themes/dist/types",
     "typescript": "5.0.4",
-    "usehooks-ts": "^3.1.0"
+    "usehooks-ts": "^3.1.0",
+    "uuid": "^11.1.0"
   }
 }
